--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                                 <li>量贩装</li>
                             </ul>
                             <ul class="two-grid2-bottom">
-                                <li class="two-grid2-bottom1" style="z-index: 1">
+                                <li class="two-grid2-bottom1" style="z-index: 1" >
                                     <div class="rightJT">
                                         <div class="rightJT-top">
                                             <img class="rightJT-top-icon" src="B21" alt="">
@@ -534,6 +534,8 @@
                                         </div>
                                         <div class="rightJT-bottom">爆款直降</div>
                                     </div>
+                                    <div class="rightJT-jian"></div>
+                                    <a href="" class="zztwo"></a>
                                     <img class="Btu" src="B2.jpg" alt="">
                                 </li>
                                 <li class="two-grid2-bottom2" style="z-index: 2">
@@ -546,6 +548,7 @@
                                         </div>
                                         <div class="rightJT-bottom">2件8折</div>
                                     </div>
+                                    <div class="rightJT-jian"></div>
                                     <img class="Btu" src="B3.jpg" alt="">
                                 </li>
                             </ul>
